feature:BFS搜索方法调用